--- a/frontend/.storybook/preview-head.html
+++ b/frontend/.storybook/preview-head.html
@@ -2,6 +2,11 @@
   body {
     margin: 0;
     padding: 0;
+    width: 100vw;
+    height: 100vh;
+    font-size: 20px;
+    background-color: #282a36;
+    color: #f8f8f2;
   }
   #root {
     width: 100vw;
